--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     border-bottom: 3px solid green;
 }
 
+
 .h1{
     color: green ;
 }
@@ -10,6 +11,24 @@
     text-transform: capitalize;
     
 }
+
+.bt:hover{
+    transition: .5s ease;
+    transform: scale(1.01);
+    
+}
+
+.somewhere{
+    border-radius: 40px;
+    float: right;
+}
+
+
+.service:hover{
+    transition: .5s ease;
+    transform: scale(1.10);
+}
+
 
 .b1{
     
@@ -37,6 +56,20 @@
     
 }
 
+.mobile{
+    height: 500px;
+    padding-left: 100px;
+}
+
+.stack{
+    padding-top: 100px;
+}
+
+.uj{
+    
+    
+}
+
 .p2{
     text-align: start;
     /* opacity: 0.7;     */
@@ -51,10 +84,20 @@
     padding-left: 100px;
 }
 
+.star{
+    color: green;
+}
+
 .float{
     float: right;
-    height: 500px;
+    padding-bottom: 100px;
+    height: 600px;
     max-width: 50%;
+}
+
+.float1{
+    float: right;
+    padding-right: 100px;
 }
 
 .max{
@@ -103,4 +146,94 @@
     /* justify-content: center; */
     /* height: 100px;   */
     /* width: 100px; */
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background-color: black;
+}
+
+.social{
+    color: green;
+}
+
+.top{
+    background-color: green;
+    justify-content: space-between;
+}
+
+
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,700);
+.testimonial9 {
+  font-family: "Montserrat", sans-serif;
+	color: #8d97ad;
+  font-weight: 300;
+}
+
+.testimonial9 h1, .testimonial9 h2, .testimonial9 h3, .testimonial9 h4, .testimonial9 h5, .testimonial9 h6 {
+  color: #3e4555;
+}
+
+.testimonial9 .bg-light {
+    background-color: #f4f8fa !important;
+}
+
+.testimonial9 h5 {
+	line-height: 30px;
+	font-size: 18px;
+}
+
+.testimonial9 .font-13 {
+	font-size: 13px;
+}
+
+.testimonial9 .card.card-shadow {
+    -webkit-box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
+    box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
+}
+
+.testimonial9 .card::after {
+  position: absolute;
+  bottom: -15px;
+  left: 35px;
+  content: '';
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 15px solid #ffffff;
+}
+
+.testimonial9 .owl-theme .owl-dots .owl-dot.active span,
+.testimonial9 .owl-theme .owl-dots .owl-dot:hover span {
+  background: #188ef4;
+}
+
+.testimonial9 .owl-dots {
+  position: absolute;
+  left: -108%;
+  top: 70%;
+}
+
+.testimonial9 .devider {
+  height: 2px;
+  width: 40px;
+}
+
+.testimonial9 .bg-info {
+    background-color: #188ef4 !important;
+}
+
+.testimonial9 .customer-thumb img {
+  width: 60px;
+}
+
+@media (max-width: 767px) {
+  .testimonial9 .owl-dots {
+    position: relative;
+    top: 0px;
+    left: 0px;
+  }
 }
