--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-.navbar{
+.navbar-line{
     border-bottom: 3px solid green;
 }
 
 
-.h1{
+h1{
     color: green ;
 }
 
-.p1{
+p1{
     text-transform: capitalize;
     
 }
@@ -18,7 +18,7 @@
     
 }
 
-.somewhere{
+.sign-button{
     border-radius: 40px;
     float: right;
 }
@@ -30,7 +30,7 @@
 }
 
 
-.b1{
+.button-style{
     
     color: green;
     background-color: rgb(255, 255, 255);
@@ -42,12 +42,12 @@
     border: 2px solid green;
 }
 
-.h2{
+h2{
     color: green;
     text-align: center;
 }
 
-.h3{
+h3{
     text-align: center;
 }
  
@@ -58,28 +58,24 @@
 }
 
 .mobile{
-    height: 500px;
+    height: auto;
+    max-width: 50%;
     padding-left: 100px;
-}
-
-.stack{
-    padding-top: 100px;
 }
 
 
 .p2{
     text-align: start;
-    /* opacity: 0.7;     */
     font-size: 10px;
 }
 
 .color{
     color: green;
 }
-
+/* 
 .pro{
     padding-left: 100px;
-}
+} */
 
 .star{
     color: green;
@@ -88,9 +84,40 @@
 .float{
     float: right;
     padding-bottom: 100px;
-    height: 600px;
+    height: auto;
     max-width: 50%;
 } 
+
+.mobile-1{
+    max-width: 50%;
+    /* width: 200px; */
+    height: auto;
+    position: absolute;
+    left: 0px;
+    z-index: 10;
+
+}
+
+.mobile-2{
+    max-width: 80%;
+    /* width: 320px; */
+    height: auto;
+    position: absolute;
+    left: 50px;
+    z-index: 9;
+}
+
+.two-mobiles{
+    position: relative;
+    width: 500px;
+    height: 500px;
+}
+
+.earn-money{
+    margin-top: 70px;
+    height: auto;
+    max-width: 50%;
+}
 
 .max{
     float: left;
@@ -131,13 +158,6 @@
     color: aliceblue;
     border: 20px;
     
-}
-
-.img5{
-    /* justify-items:  end;    	 */
-    /* justify-content: center; */
-    /* height: 100px;   */
-    /* width: 100px; */
 }
 
 .footer{
