--- a/style.css
+++ b/style.css
@@ -54,14 +54,8 @@ h3{
 .img1{
     height:50px;
     width: 50;
-    
 }
 
-.mobile{
-    height: auto;
-    max-width: 50%;
-    padding-left: 100px;
-}
 
 
 .p2{
@@ -89,35 +83,30 @@ h3{
 } 
 
 .mobile-1{
-    max-width: 50%;
-    /* width: 200px; */
-    height: auto;
     position: absolute;
-    left: 0px;
-    z-index: 10;
-
+    height: 95%;
+    margin-top: -125%;
 }
 
-.mobile-2{
+
+
+.two-mobiles{
+    position: relative;
+}
+
+/* .mobile-2{
     max-width: 80%;
-    /* width: 320px; */
     height: auto;
     position: absolute;
     left: 50px;
     z-index: 9;
-}
+} */
 
-.two-mobiles{
+/* .two-mobiles{
     position: relative;
     width: 500px;
     height: 500px;
-}
-
-.earn-money{
-    margin-top: 70px;
-    height: auto;
-    max-width: 50%;
-}
+} */
 
 .max{
     float: left;
@@ -217,10 +206,7 @@ h3{
 	font-size: 13px;
 }
 
-.testimonial9 .card.card-shadow {
-    -webkit-box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
-    box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
-}
+
 
 .testimonial9 .card::after {
   position: absolute;
@@ -230,17 +216,6 @@ h3{
   border-left: 15px solid transparent;
   border-right: 15px solid transparent;
   border-top: 15px solid #ffffff;
-}
-
-.testimonial9 .owl-theme .owl-dots .owl-dot.active span,
-.testimonial9 .owl-theme .owl-dots .owl-dot:hover span {
-  background: #188ef4;
-}
-
-.testimonial9 .owl-dots {
-  position: absolute;
-  left: -108%;
-  top: 70%;
 }
 
 .testimonial9 .devider {
@@ -256,10 +231,18 @@ h3{
   width: 60px;
 }
 
-@media (max-width: 767px) {
-  .testimonial9 .owl-dots {
-    position: relative;
-    top: 0px;
-    left: 0px;
-  }
+
+.boss{
+    color: green;
+    background-color: rgb(255, 255, 255);
+    border-radius: 30px;
+    border: none;
+    padding: auto;
+    width: 200px;
+    height: auto;
+    border: 2px solid green;
+}
+
+@media only screen and (max-width: 768px) {
+    
 }
