--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@ p1{
 
 
 .button-style{  
-    color: green;
-    background-color: rgb(255, 255, 255);
+    color:  white;
+    background-color: rgb(46, 250, 0);
     border-radius: 30px;
     border: none;
     padding: auto;
     width: 200px;
     height: 40px;
-    border: 2px solid green;
+    /* border: 2px solid green; */
 }
 
 h2{
@@ -74,23 +74,23 @@ h3{
     color: green;
 }
 
-.float{
-    float: right;
-    padding-bottom: 100px;
-    height: auto;
-    max-width: 50%;
-} 
 
 .mobile-1{
     position: absolute;
-    height: 95%;
-    margin-top: -125%;
+    height: 85%;
+    margin-top: -118%;
 }
 
-
+.mobile-2{
+    height: 95%;
+}
 
 .two-mobiles{
     position: relative;
+}
+
+.take-this{
+    background: linear-gradient(to right, green, rgb(96, 224, 22));
 }
 
 /* .mobile-2{
@@ -110,6 +110,10 @@ h3{
 .max{
     float: left;
     padding-right: 30px;
+}
+
+.check-this{
+    padding-top: 20%;
 }
 
 .b2{
@@ -182,49 +186,6 @@ h3{
 
 
 @import url(//fonts.googleapis.com/css?family=Montserrat:300,400,700);
-/*.testimonial9 {
-  font-family: "Montserrat", sans-serif;
-	color: #8d97ad;
-  font-weight: 300;
-}
-
-.testimonial9 h1, .testimonial9 h2, .testimonial9 h3, .testimonial9 h4, .testimonial9 h5, .testimonial9 h6 {
-  color: #3e4555;
-}
-
-.testimonial9 .bg-light {
-    background-color: #f4f8fa !important;
-}
-
-.testimonial9 h5 {
-	line-height: 30px;
-	font-size: 18px;
-}
-
-.testimonial9 .font-13 {
-	font-size: 13px;
-}
-
-
-
-.testimonial9 .card::after {
-  position: absolute;
-  bottom: -15px;
-  left: 35px;
-  content: '';
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 15px solid #ffffff;
-}
-
-.testimonial9 .devider {
-  height: 2px;
-  width: 40px;
-}
-
-.testimonial9 .bg-info {
-    background-color: #188ef4 !important;
-}*/
 
 .testimonial9 .customer-thumb img {
   width: 60px;
@@ -232,14 +193,14 @@ h3{
 
 
 .boss{
-    color: green;
-    background-color: rgb(255, 255, 255);
+    color:  white;
+    background-color: rgb(46, 250, 0);
     border-radius: 30px;
     border: none;
     padding: auto;
     width: 200px;
     height: auto;
-    border: 2px solid green;
+    
 }
 
 @media only screen and (max-width: 600px) {
@@ -248,6 +209,11 @@ h3{
     }
 
     .mobile-1{
-        margin-top: -112%;
+        margin-top: 10px;
+        margin-left: -350px !important;
+    }
+
+    .check-this{
+        padding: 0;
     }
 }
